fix: precise visual alignment adjustment for new logo image

--- a/public/style.css
+++ b/public/style.css
@@ -199,7 +199,7 @@ img {
     font-size: 1.8rem;
     font-weight: 800;
     letter-spacing: 2px;
-    margin-top: 4px;
+    margin-top: 6px;
     transform: skewX(-12deg);
     display: inline-block;
     /* Red Metallic Gradient for BLAZE */
@@ -1635,7 +1635,7 @@ img {
 
     .logo-name {
         font-size: 1.4rem;
-        margin-top: 3px;
+        margin-top: 5px;
     }
 
     .logo-img {
